--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^28.1.38
   flutter_spinkit: ^5.0.0
   flutter_sparkle: ^0.0.2
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
